--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+
+    <!-- At here, You need change color background for your application -->
+    <color name="viewBg">#f1f5f8</color>
+
+    <!-- At here,  You need to set color for album title -->
+    <color name="album_title">#4c4c4c</color>
+
 </resources>
